# linxira-completion-agent

./: README.md  pyproject.toml
data/: org.linxira.Completion.desktop  org.linxira.Completion.metainfo.xml
data/autostart/: org.linxira.Completion.desktop
src/linxira_completion_agent/: app.py  backend.py  model.py  selection.py  state.py
tests/: test_completion.py
