[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "linxira-completion-agent"
version = "0.1.1"
description = "First-online completion workflow for Linxira OS"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["PySide6"]

[project.scripts]
linxira-completion-agent = "linxira_completion_agent.app:main"

[tool.setuptools.packages.find]
where = ["src"]
